# shared-datasets-1

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
api/python/: README.md  pyproject.toml
api/python/src/skytruth_shared_datasets/: __init__.py  catalog.py  cli.py
api/python/src/skytruth_shared_datasets/data/: shared-datasets-catalog.csv
catalog/: categories.yaml  shared-datasets-catalog.csv
docs/: catalog-web-preview.md  consumer-guide.md  feature-metadata-api.md  feature-metadata-preview.md  feature-preview.md  gcp-asset-operations.md  p0-4-release-index-repair.md  p0-iho-world-seas-release-index-repair.md  p0-ims-sea-ice-release-index-repair.md  p0-release-index-completion-followup.md  pmtiles-cdn.md  terraform-state-recovery.md  tooling-decision-record.md
ingestion/: README.md  __init__.py
scripts/: README.md  admission_check.py  catalog_csv.py  catalog_docs.py  catalog_drift_guard.py  catalog_site.py  catalog_web_publish.py  concierge_profiling.py  dataset_alerts.py  feature_metadata_document_translate.py  feature_metadata_index.py  feature_metadata_localization.py  feature_metadata_machine_translate.py  feature_metadata_translation_pipeline.py  feature_preview_index.py  feature_preview_reset.py  finalize_promoted_release_metadata.py  gcs_asset.py  local_wdpa_sample.py  localized_vector_asset.py  pmtiles_zoom.py  publish_release.py  publish_workflow.py  publishing_concierge.py  raster_asset.py  release_feature_model.py  repo_alerts.py  repo_guardrails.py  reviewed_dataset_plan.py  scratch_cleanup.py  shared_dataset_group_ids.py  slack_notify.py  terraform_plan_allowlist.py  terraform_prod_apply.py  terraform_state_backend_guard.py  terraform_state_migrate.sh  vector_asset.py
services/: __init__.py  http_base.py
templates/: bucket_hygiene_report.template.md  bucket_root_README.md  cron_run.template.json  dataset_README.minimal.template.md  dataset_README.template.md
terraform/: .terraform.lock.hcl  iam.tf  variables.tf  versions.tf
tests/: temp_workspace.py  test_admission_check.py  test_agent_translation_skills.py  test_alerting.py  test_catalog_docs.py  test_catalog_drift_guard.py  test_catalog_site.py  test_catalog_viewer.py  test_catalog_viewer_deploy_workflow.py  test_catalog_viewer_tf.py  test_catalog_web_pmtiles_js.py  test_catalog_web_publish.py  test_catalog_web_workflows.py  test_common_http.py  test_compliance_audit.py  test_dataset_alerts.py  test_eamlis_monthly.py  test_feature_metadata_document_translate.py  test_feature_metadata_index.py  test_feature_metadata_localization.py  test_feature_metadata_machine_translate.py  test_feature_metadata_translation_pipeline.py  test_feature_preview.py  test_feature_preview_index.py  test_feature_preview_reset.py  test_feature_preview_service.py  test_finalize_promoted_release_metadata.py  test_gcs_asset.py  test_geospatial_ci.py  test_ingestion_common.py  test_localized_vector_asset.py  test_metadata_index_loader_iam_sync_workflow.py  test_metadata_localization_workflow.py  (+34 more)
(+192 files in other folders)
