[project]
name = "shared-datasets-1"
version = "0.1.0"
description = "Control-plane tooling for SkyTruth shared datasets."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "google-cloud-firestore>=2.21.0,<3",
  "google-cloud-storage>=2.19.0",
  "rich>=13.0.0",
  "typer>=0.12.0",
  "PyYAML>=6.0.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.0",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config"
pythonpath = [".", "api/python/src"]
testpaths = ["tests"]
